# soyuz

./: Cargo.toml  shader.wgsl
src/: main.rs  state.rs
src/entity/: mod.rs
src/entity/model/: mesh.rs  mod.rs
src/entity/model/files/: obj.rs
