[package]
name = "soyuz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13.*", features=["fs", "rt-multi-thread", "io-util"]}
derive_more = "0.99.*"
wgpu = "0.11.*"
bytemuck = {version = "1.7.*", features=["derive"]}
cgmath = "0.18.*"
winit = "0.25.*"
log = "0.4.*"
env_logger = "0.9.*"
pollster = "0.2.*"
async-executor = "1.4.*"